# summarize-dir

./: Cargo.toml
src/: args.rs  init.rs  main.rs
